fix(tests): suite unitaire Mockito uniquement, doc et CI à jour